--- a/index.html
+++ b/index.html
@@ -10,33 +10,30 @@
 
 <body>
     <header>
-
         <nav>
             <div>
                 <img src="/assets/logo.png" alt="">
             </div>
-            <div>
-                <ul>
+            <div class="nav-button">
+                <ul class="nev-items">
                     <li><a href="">Home</a></li>
                     <li><a href="">Shop</a></li>
                     <li><a href="">About Us</a></li>
                 </ul>
-                <button>
-
-                    <button>cart</button>
+                <button class="btn-gray">
+                    cart
                 </button>
             </div>
         </nav>
-        <div class="banner">
-            <div>
+        <div class="banner">  
                 <div class="banner-info">
-                    <h1 class="banner-title">ALWAYS FRESH <span>FLOWERS</span></h1>
+                    <h1 class="banner-title">ALWAYS  <span>FRESH <br> FLOWERS</span></h1>
                     <p class="banner-description">Indulge your senses with the beauty and fragrance of our fresh flower
                         shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are
                         perfect for any occasion. </p>
                 </div>
                 <div class="banner-img"><img src="/assets/hero-flower.png" alt=""></div>
-            </div>
+            
             <div></div>
         </div>
     </header>
