our plants section added and respocive style add

--- a/index.html
+++ b/index.html
@@ -25,18 +25,92 @@
                 </button>
             </div>
         </nav>
-        <div class="banner">  
-                <div class="banner-info">
-                    <h1 class="banner-title">ALWAYS  <span>FRESH <br> FLOWERS</span></h1>
-                    <p class="banner-description">Indulge your senses with the beauty and fragrance of our fresh flower
-                        shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are
-                        perfect for any occasion. </p>
-                </div>
-                <div class="banner-img"><img src="/assets/hero-flower.png" alt=""></div>
-            
+        <div class="banner">
+            <div class="banner-info">
+                <h1 class="banner-title">ALWAYS <span>FRESH <br> FLOWERS</span></h1>
+                <p class="banner-description">Indulge your senses with the beauty and fragrance of our fresh flower
+                    shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are
+                    perfect for any occasion. </p>
+            </div>
+            <div class="banner-img"><img src="/assets/hero-flower.png" alt=""></div>
+
             <div></div>
         </div>
     </header>
+    <main>
+        <section class="our-plants">
+            <div class="plants">
+                <h1 class="banner-title"><span>Our</span> Plants </h1>
+                <p class="banner-description">Indulge your senses with the beauty and fragrance of our fresh flower
+                    shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+            </div>
+            <div class="cart-section">
+
+                <div class="cart">
+                    <img src="/assets/deal-ana.png" alt="">
+                    <h3 class="cart-title">Lily Blossom</h3>
+                    <h2 class="price">20USD</h2>
+                    <button class="btn-cart">add to cart</button>
+                </div>
+                <div class="cart">
+                    <img src="/assets/deal-bloom.png" alt="">
+                    <h3 class="cart-title">deal bloom</h3>
+                    <h2 class="price">25USD </h2>
+                    <button class="btn-cart">add to cart</button>
+                </div>
+                <div class="cart">
+                    <img src="/assets/deal-zabo.png" alt="">
+                    <h3 class="cart-title">Lily Blossom</h3>
+                    <h2 class="price">20USD</h2>
+                    <button class="btn-cart">add to cart</button>
+                </div>
+                <div class="cart">
+                    <img src="/assets/flower-store.png" alt="">
+                    <h3 class="cart-title">deal bloom</h3>
+                    <h2 class="price">25USD </h2>
+                    <button class="btn-cart">add to cart</button>
+                </div>
+                <div class="cart">
+                    <img src="/assets/deal-ana.png" alt="">
+                    <h3 class="cart-title">Lily Blossom</h3>
+                    <h2 class="price">20USD</h2>
+                    <button class="btn-cart">add to cart</button>
+                </div>
+                <div class="cart">
+                    <img src="/assets/deal-bloom.png" alt="">
+                    <h3 class="cart-title">deal bloom</h3>
+                    <h2 class="price">25USD </h2>
+                    <button class="btn-cart">add to cart</button>
+                </div>
+                <div class="cart">
+                    <img src="/assets/deal-ana.png" alt="">
+                    <h3 class="cart-title">Lily Blossom</h3>
+                    <h2 class="price">20USD</h2>
+                    <button class="btn-cart">add to cart</button>
+                </div>
+                <div class="cart">
+                    <img src="/assets/deal-bloom.png" alt="">
+                    <h3 class="cart-title">deal bloom</h3>
+                    <h2 class="price">25USD </h2>
+                    <button class="btn-cart">add to cart</button>
+                </div>
+                <div class="cart">
+                    <img src="/assets/deal-ana.png" alt="">
+                    <h3 class="cart-title">Lily Blossom</h3>
+                    <h2 class="price">20USD</h2>
+                    <button class="btn-cart">add to cart</button>
+                </div>
+                <div class="cart">
+                    <img src="/assets/deal-bloom.png" alt="">
+                    <h3 class="cart-title">deal bloom</h3>
+                    <h2 class="price">25USD </h2>
+                    <button class="btn-cart">add to cart</button>
+                </div>
+            </div>
+
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
