latest deals section add and footer added

--- a/index.html
+++ b/index.html
@@ -110,7 +110,74 @@
 
             </div>
         </section>
+
+        <!-- lover section start -->
+        <section class="lover">
+            <div class="plants-lover">
+                <div class="love-img">
+                    <img src="/assets/flower-store.png" alt="">
+                    <div class="badge"><img src="/assets/trusted-badge.png" alt=""></div>
+                </div>
+                <div class="plants-lover-info">
+                    <h1 style="margin:0px -30px;" class="banner-title">Flower & Plants <br> Lover</h1>
+
+                    <ul>
+                        <li class="banner-description">Indulge your senses with the beauty and fragrance of our fresh
+                            flower shop. From classic
+                            roses to exotic blooms, we offer a wide variety of fresh.</li>
+                        <li class="banner-description">Indulge your senses with the beauty and fragrance of our fresh
+                            flower shop. From classic
+                            roses to exotic blooms, we offer a wide variety of fresh.</li>
+                        <li class="banner-description">Indulge your senses with the beauty and fragrance of our fresh
+                            flower shop. From classic
+                            roses to exotic blooms, we offer a wide variety of fresh.</li>
+                    </ul>
+
+                </div>
+            </div>
+        </section>
+        <section class="latest-deals">
+            <div class="latest-deals-info">
+                <h1 class="banner-title"><span>Latest </span>Deals</h1>
+                <p class="banner-description">Indulge your senses with the beauty and fragrance of our fresh flower
+                    shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+            </div>
+           <div class="latest-carts">
+            <!-- <img src="/assets/deal-ana.png" alt=""> -->
+             <div class="latest-cart" id="latest-cart1">
+                <h1 class="latest-cartInfo">25% Off | Zabo Plant</h1>
+                <a href="" class="infoLink">Bay Now</a>
+            </div>
+            <div class="latest-cart" id="latest-cart2">
+                <h1 class="latest-cartInfo">25% Off | Zabo Plant</h1>
+                <a href="" class="infoLink">Bay Now</a>
+            </div>
+            <div class="latest-cart" id="latest-cart3">
+                <h1 class="latest-cartInfo">25% Off | Zabo Plant</h1>
+                <a href="" class="infoLink">Bay Now</a>
+            </div>
+           </div>
+        </section>
+
     </main>
+
+    <footer>
+        <div class="footerInfo">
+            <img src="/assets/logo.png" alt="">
+            <p class="banner-description">Indulge your senses with the beauty and fragrance of our fresh flower shop. </p>
+        </div>
+        <div>
+            <ul class="nev-items">
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Shop</a></li>
+                    <li><a href="">About Us</a></li>
+                </ul>
+        </div>
+        <img src="/assets/icon-facebook.png" alt="">
+        <img src="/assets/icon-linkedin.png" alt="">
+        <img src="/assets/icon-twitter.png" alt="">
+        <img src="/assets/icon-youtube.png" alt="">
+    </footer>
 </body>
 
 </html>
