responcive css added and page complete

--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
                 </div>
             </div>
         </section>
+        <!-- latest Deals Start -->
         <section class="latest-deals">
             <div class="latest-deals-info">
                 <h1 class="banner-title"><span>Latest </span>Deals</h1>
@@ -158,7 +159,16 @@
             </div>
            </div>
         </section>
-
+<!-- Join the colorful Bunch Section Start -->
+ <section class="join">
+    <div class="join-info">
+        <h1>Join the colorful Bunch</h1>
+    </div>
+    <div class="join-input">
+        <input type="email" name="" placeholder="type Your email" id="email">
+        <input type="submit" class="btn-cart" value="Subscribe">
+    </div>
+ </section>
     </main>
 
     <footer>
@@ -166,7 +176,7 @@
             <img src="/assets/logo.png" alt="">
             <p class="banner-description">Indulge your senses with the beauty and fragrance of our fresh flower shop. </p>
         </div>
-        <div>
+        <div >
             <ul class="nev-items">
                     <li><a href="">Home</a></li>
                     <li><a href="">Shop</a></li>
